# cmake

./: README.md
cmake_unittest/: CMakeLists.txt  main.cpp
cmake_unittest/staticlib/: CMakeLists.txt  max.cpp  max.h
cmake_unittest/test/: CMakeLists.txt  test.cpp
cmakemulsrc/: CMakeLists.txt  main.cpp
cmakesharedlib/: CMakeLists.txt  main.cpp
cmakesharedlib/sharedlib/: max.cpp  max.h
cmakesharedlib1/: CMakeLists.txt  main.c
cmakesharedlib1/sharedlib/: max.c  max.h
cmakesharedlib1_externc/: CMakeLists.txt  main.cpp
cmakesharedlib1_externc/sharedlib/: CMakeLists.txt  max.cpp  max.h
cmaketeststaticlib/: CMakeLists.txt  main.cpp
